Revision history for Dancer-Plugin-SimpleCRUD

0.05    2011-05-25
        Pay attention to the app's prefix setting.  Thanks to saberworks for
        reporting this (GH-6)
        Fix bug with calling database->quick_update wrongly, preventing rows
        from being updated... silly :|

0.04    2011-05-11
        Avoid uninitialised var warnings if table is empty.
        Thanks to Justin Case in RT #68120 for reporting this and providing a
        patch to fix it - cheers!

0.03    2011-05-09
        Added support to search when in the listing page;
        Code refactoring - thanks to ambs for both!

        Remove dependency on SQL::Abstract, use the convenience methods now
        provided by Dancer::Plugin::Database instead.  Thanks to Jonathan
        Berber for prompting this via RT #68040, reporting that setting
        SQL::Abstract's quote_char to a backtick causes the generated queries to
        be invalid for PostgreSQL.


0.02    2011-03-06
        Discard render_with_layout bodgery in favour of using
        engines('template')->apply_layout().  Thanks to ambs for this.
        Various other bug fixes.

0.01    2010-12-21
        Initial beta-quality release.
