@@ -1,5 +1,8 @@
 Revision history for Dancer-Plugin-SimpleCRUD
 
+        Fix documentation on editable_columns;
+        Implement not_editable_columns (was documented, not implemented)
+
 0.05    2011-05-25
         Pay attention to the app's prefix setting.  Thanks to saberworks for
         reporting this (GH-6)
